2014-03-04 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c, aprx.c, aprx.h, aprx.conf.in, aprx.8.in:
	    Kamil Palkowiski SQ8KFH's beacon exec idea rewritten to be
	    non-blocking in execution.  The Aprx main loop does not
	    tolerate blocking programs.

	* aprsis.c, ttyreader.c:
	    poll(2) results on file handles asking for POLLIN can include
	    POLLHUP and POLLERR.

2014-03-04 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, doc/aprx-manual.odt:
	    Document <aprsis> passcode a bit more.

	* aprsis.c, aprx.c, aprx.h, netax25.c:
	    Move aprxlog() from aprsis.c to aprx.c.
	    Use aprxlog() instead of open coded logger at netax25.c.
	    Modify which type of APRSIS events get logged without
	    the runtime -L option to the aprxlogfile.

2014-02-26 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in,  agwpesocket.c, aprsis.c, aprx-stat.c, aprx.c, aprx.h,
	  aprxpolls.c, beacon.c, config.h.in, configure.in, digipeater.c,
	  dprsgw.c, dupecheck.c, erlang.c, filter.c, historydb.c, hlog.c,
	  igate.c, interface.c, kiss.c, netax25.c, netresolver.c, pbuf.c,
	  telemetry.c, timercmp.c, ttyreader.c:
	    Change primary time management to use system monotonic clock
	    instead of time-of-day clock that can jump back/forward.
	    This clock is in -lrt as: clock_gettime(CLOCK_MONOTONIC, ...)
	    and it is the kernel internal primary jiffy lock.
	    This value is not synchronized with wall clock, although it
	    does proceeds at about same rate.  It is also present at FreeBSD,
	    and presumably several other platforms too. (It is a POSIX thing,
	    after all.)

	    The system also watches over if the delta in between subsequent
	    value extracts exceeds about 30 seconds, or the time jumps
	    backwards at all. If such happens, next call cycle on all prepoll
	    routines are resetting all time management things in particular
	    subsystem.

	    Renamed the primary time tracking variable from "now" to "tick",